--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <title>Minha página do Colabeduc</title>
+  
 </head>
-
 <body>
 <h1>Bem vindo a minha página do Colabeduc</h1>
 <p>Aqui vocês terão acesso a todos os meus jogos</p>
+  <a href="https://www.w3schools.com">Visit W3Schools</a>
+  <a href="https://marianaduarte1.github.io/equacoesquivalentes/">Meu Primeiro Jogo</a>
+  
 
 </body>
 </html>
