--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Bem vindo a minha página do Colabeduc</h1>
 <p>Aqui vocês terão acesso a todos os meus jogos</p>
   <a href="https://www.w3schools.com">Visit W3Schools</a>
-  <a href="https://marianaduarte1.github.io/equacoesquivalentes/">Meu Primeiro Jogo</a>
+  <a href="https://marianaduarte1.github.io/fracoesequivalentes/">Meu Primeiro Jogo</a>
   
 
 </body>
